Changes after aborting rebase

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,12 +8,11 @@
     align-items: center;
   }
 
-  h3 {
+  h1 {
     position: absolute;
     top:100px;
-    //width: 100%;
-    //text-align: left;
+    width: 0%;
+    text-align: center;
     color: snow;  /* Adjust color if needed */
-    left:35%;
   }
   
