--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -332,4 +332,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<router-outlet />
+<router-outlet><router-outlet/>
