--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="bg-image d-flex align-items-center justify-content-center">
   
   <!-- Login Box -->
-  <div class="d-flex justify-content-between align-items-center px-2 pt-3">
-    <h3 class="text-center mb-4" style="color:black;position: absolute; right: 30%; top: 20%;">Eventure Event Management System</h3>
+  <div class="d-flex justify-content-between align-items-center px-2 pt-3 title-block-1">
+    <h3 class="text-center mb-4" style="color:black;position: absolute; right: 30%; top: 20%;font-size: 20px;">Eventure Event Management System</h3>
 
   </div>
   <div class="card p-4 shadow" style="width: 300px;">
@@ -23,7 +23,7 @@
 </div>
 <div class="d-flex justify-content-between align-items-center px-4 pt-3">
   <!-- <a routerLink="/register-org" class="btn btn-link text-light" style="position: absolute; right: 20px; top: 15px;z-index: 1000;">Register your organization</a> -->
-  <button class="btn btn-primary" style="position: absolute; right: 20px; top: 15px;z-index: 1000;" (click)="navigateToOrgReg()">Register your organization</button>
+  <button class="link-btn" style="position: absolute; right: 20px; top: 15px;z-index: 1000;" (click)="navigateToOrgReg()">Register your organization</button>
 
 </div>
 
