--- a/src/app/pages/org-register/org-register.component.html
+++ b/src/app/pages/org-register/org-register.component.html
@@ -1,9 +1,107 @@
 <div class="container">
     <div class="content">
         <div class="image-container">
-            <img 
-            ngSrc="assets/side_img1.png" width="100" height="100" placeholder [placeholderConfig]="{blur: false}" 
-            />
+            <img src="assets/side_img1.png" width="100" height="100" placeholder />
+        </div>
+        <div class="register-form-container">
+            <div>
+
+                <div>
+                    <div class="title-block-0">
+                        
+                            <h1><button class="link-btn" (click)="navigateToHome()">Eventure </button></h1>
+                       
+                    </div>
+                    <div class="radio-container">
+                        <input type="radio" name="formType" checked (click)="displayForm('userForm')" />Register as an
+                        user
+                        <input type="radio" name="formType" (click)="displayForm('orgForm')" />Register your
+                        organization
+                    </div>
+
+                    @if(formType==="userForm"){
+                    <div class="register-form">
+                        <h3>Register as an user</h3>
+                        <span class="errorMsg">{{error}}</span>
+                        <form [formGroup]="userForm" (ngSubmit)="saveData()">
+                            <div class="form-group row mt-3">
+                                <label for="userName" class="col-sm-4 col-form-label">User Name :<span
+                                        style="color:red">*</span></label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" id="userName" formControlName="userName">
+                                </div>
+                            </div>
+                            <div class="form-group row mt-3">
+                                <label for="userName" class="col-sm-4 col-form-label">Email :<span
+                                        style="color:red">*</span></label>
+                                <div class="col-sm-5">
+                                    <input type="email" class="form-control" id="userEmail" formControlName="userEmail">
+                                </div>
+                            </div>
+                            <div class="form-group row mt-3">
+                                <label for="userContactNo" class="col-sm-4 col-form-label">Contact Number :<span
+                                        style="color:red">*</span></label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" id="userContactNo"
+                                        formControlName="userContactNo">
+                                </div>
+                            </div>
+                            <div class="form-group row mt-3">
+                                <label for="userPassword" class="col-sm-4 col-form-label">Password :<span
+                                        style="color:red">*</span></label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" id="userPassword"
+                                        formControlName="userPassword">
+                                </div>
+                            </div>
+
+                            <span class="btn-grp-reg">
+                                <button type="submit" class="btn btn-primary">Save</button>
+                                <button type="reset" class="btn btn-primary" (click)="resetForm()">Cancel</button>
+                            </span>
+                        </form>
+                    </div>
+                    }
+                    @if(formType==="orgForm"){
+                    <div class="register-form">
+                        <h3>Register as an organization</h3>
+                        <span class="errorMsg">{{error}}</span>
+                        <form [formGroup]="orgForm" (ngSubmit)="saveData()">
+                            <div class="form-group row mt-3">
+                                <label for="orgName" class="col-sm-4 col-form-label">Organization Name :<span
+                                        style="color:red">*</span></label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" id="orgName" formControlName="orgName">
+                                </div>
+                            </div>
+
+                            <div class="form-group row mt-3">
+                                <label for="orgEmail" class="col-sm-4 col-form-label">Organization Email :<span
+                                        style="color:red">*</span></label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" id="orgEmail" formControlName="orgEmail">
+                                </div>
+                            </div>
+
+                            <div class="form-group row mt-3">
+                                <label for="orgContactNo" class="col-sm-4 col-form-label">Organization Contact No :<span
+                                        style="color:red">*</span></label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" id="orgContactNo"
+                                        formControlName="orgContactNo">
+                                </div>
+                            </div>
+
+                            <span class="btn-grp-reg">
+                                <button type="submit" class="btn btn-primary">Save</button>
+                                <button type="reset" class="btn btn-primary" (click)="resetForm()">Cancel</button>
+                            </span>
+                        </form>
+                    </div>
+                    }
+
+                </div>
+            </div>
         </div>
     </div>
 </div>
