--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,71 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 13px;
+}
+
+.radio-container{
+    margin:5% 5% 5% 10%;
+}
+
+.radio-container > input{
+    margin-left: 10%;
+    margin-right:1%;
+}
+
+.btn-grp-reg{
+    margin-left:10%
+}
+
+.btn-grp-reg >button{
+    margin-right:10%
+}
+
+.register-form{
+    margin-left: 10%;
+}
+
+.btn-grp-reg{
+    margin-top: 5%;
+    margin-left: 30%;
+    display: block;
+}
+
+.title-block-0{
+    margin-top: 3%;
+    display: flex;
+  justify-content: center; /* Centers horizontally */
+  align-items: center;    /* Centers vertically */
+}
+
+.title-block-1{
+    display: flex;
+  justify-content: center; /* Centers horizontally */
+  align-items: center;    /* Centers vertically */
+}
+
+.link-btn {
+    box-shadow: inset 0 1px 0 0 #ffffff;
+    //background: #00008b linear-gradient(to bottom, #00008b 0%, #f6f6f6 0%);
+    background: #0c0ce8 linear-gradient( to bottom, #00008b 10%, #00008b 5%);;
+    border-radius: 6px;
+    border: 1px solid #dcdcdc;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #ffffff;
+    outline: 0;
+}
+.link-btn-active {
+    box-shadow: inset 0 1px 0 0 #dcecfb;
+    background: #bddbfa linear-gradient(to bottom, #bddbfa 5%, #80b5ea 100%);
+    border: 1px solid #84bbf3;
+    color: #ffffff;
+    text-shadow: 0 1px 0 #528ecc;
+}
